testsuite/tests/indexed-types/should_fail/OverD.hs
module OverD where
-- Tests that we verify consistency of type families between
-- transitive imports.
import OverB
import OverC
